# gh-copilot-transcripts

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/session-diagnostics/: SKILL.md
.github/skills/session-diagnostics/scripts/: detect_dupes.py  inspect_session.py  verify_e2e.py
src/gh_copilot_transcripts/: __init__.py
src/gh_copilot_transcripts/templates/: base.html  index.html  macros.html  master_index.html  page.html  project_index.html
tests/: conftest.py  sample_session.jsonl  test_all.py  test_discovery.py  test_generate_html.py  test_parse.py  test_snapshots.py
tests/__snapshots__/test_snapshots/: TestFullPageSnapshots.test_sample_session_index.html  TestFullPageSnapshots.test_sample_session_page.html  TestRenderSectionSnapshots.test_edit_group.html  TestRenderSectionSnapshots.test_text_section.html  TestRenderSectionSnapshots.test_thinking_section.html  TestRenderSectionSnapshots.test_todo_list.html  TestRenderSectionSnapshots.test_tool_mcp.html  TestRenderSectionSnapshots.test_tool_read_file.html  TestRenderSectionSnapshots.test_tool_replace_string.html  TestRenderSectionSnapshots.test_tool_terminal_with_error.html  TestRenderSectionSnapshots.test_tool_terminal_with_output.html
